Update coordinates of JCCCNC locations

--- a/NCCBF-iOS/Resources/EventLocationCoordinateList.plist
+++ b/NCCBF-iOS/Resources/EventLocationCoordinateList.plist
@@ -26,30 +26,30 @@
 	<key>JCCCNC - Classroom One</key>
 	<dict>
 		<key>latitude</key>
-		<real>37.7865043</real>
+		<real>37.78657</real>
 		<key>longitude</key>
-		<real>-122.4308199</real>
+		<real>-122.430834</real>
 	</dict>
 	<key>JCCCNC - Classroom Two</key>
 	<dict>
 		<key>latitude</key>
-		<real>37.7865043</real>
+		<real>37.786532</real>
 		<key>longitude</key>
-		<real>-122.4308199</real>
+		<real>-122.430898</real>
 	</dict>
 	<key>JCCCNC - Gym</key>
 	<dict>
 		<key>latitude</key>
-		<real>37.7865043</real>
+		<real>37.786536</real>
 		<key>longitude</key>
-		<real>-122.4308199</real>
+		<real>-122.430956</real>
 	</dict>
 	<key>JCCCNC - Issei Memorial Hall</key>
 	<dict>
 		<key>latitude</key>
-		<real>37.7865043</real>
+		<real>37.786535</real>
 		<key>longitude</key>
-		<real>-122.4308199</real>
+		<real>-122.431032</real>
 	</dict>
 	<key>Kabuki Cinemas</key>
 	<dict>
