Update copyright text

--- a/NCCBF-iOS/Resources/MoreInfoMenuItem.plist
+++ b/NCCBF-iOS/Resources/MoreInfoMenuItem.plist
@@ -32,9 +32,7 @@ This app uses free icons from 100 free iOS icons by Pixel Love Ltd (https://www.
 	<key>Copyright</key>
 	<string>NCCBF is the official mobile app for Northern California Cherry Blossom Festival®, developed by Keita Ito: http://keitaito.com
 
-Photography except logo images of companies and organizations are the copyrighted property of Dave Golden: http://dave-golden.com
-
-All images on this website are the copyrighted property of their respective owners and may not be used without expressed permission from the owner/photographer. No usage in any public works is allowed without our permission.
+All images on this app are the copyrighted property of their respective owners and may not be used without expressed permission from the owner/photographer. No usage in any public works is allowed without our permission.
 
 The “Northern California Cherry Blossom Festival”® name is a registered trademark of the Sakura Matsuri Inc. Northern California Cherry Blossom Festival trademarks may not be used in connection with any product or service that is not Northern California Cherry Blossom Festival’s, in any manner that is likely to cause confusion among customers or in any manner that disparages or discredits Northern California Cherry Blossom Festival. Other products or company names used on this website may be trademarks of their respective owners.</string>
 	<key>About</key>
